[gd_scene load_steps=11 format=2]

[ext_resource path="res://templates/Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/ZombieBot/enemy_zombie-bot.png" type="Texture" id=2]
[ext_resource path="res://objects/ZombieBot/ZombieBot.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RayShape2D" id=7]
length = 16.0

[sub_resource type="RayShape2D" id=6]
length = 3.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8, 4 )

[node name="ZombieBot" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 22
script = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
frame = 2
playing = true

[node name="CollisionShape2D" parent="." index="1"]
visible = false

[node name="EdgeDetector" type="Area2D" parent="." index="2"]
position = Vector2( -10, 7 )
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="EdgeDetector" index="0"]
shape = SubResource( 7 )

[node name="WallDetector" type="Area2D" parent="." index="3"]
collision_layer = 4
collision_mask = 2147483664

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector" index="0"]
position = Vector2( -7, 0 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="." index="4"]
wait_time = 0.5
one_shot = true

[node name="HeadTop" type="Area2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadTop" index="0"]
position = Vector2( 0, -18 )
shape = SubResource( 8 )
[connection signal="body_entered" from="HeadTop" to="." method="_on_HeadTop_body_entered"]
